--- a/views/viewPartials/categoryOverviews.pug
+++ b/views/viewPartials/categoryOverviews.pug
@@ -3,10 +3,11 @@ for category in categories
     // if there's more than one per category
     if uploads[category.name] && uploads[category.name].length && uploads[category.name].length > 0
         div.category.col-sm-12
-            if user.role == 'admin' || user.role == 'moderator'
-                h2 #{category.displayName} (#{uploads[category.name].length})
-            else
-                h2 #{category.displayName}
+            a.upload-user-text(href=`${addressPrepend}/${highlightedNumber}?category=${category.name}`)
+                if user.role == 'admin' || user.role == 'moderator'
+                    h2 #{category.displayName} (#{uploads[category.name].length})
+                else
+                    h2 #{category.displayName}
 
             // begin individual upload section
             each upload in uploads[category.name]
@@ -22,3 +23,4 @@ for category in categories
                             if user && user.role == 'admin'
                                 div.changeRating(style="margin-top:30px;")
                                     input.ratingChanged(type="checkbox" value=`${upload._id}`)
+
