touching up recent and popular

--- a/views/mediaBrowsing/popularUploads.pug
+++ b/views/mediaBrowsing/popularUploads.pug
@@ -17,6 +17,9 @@ block content
 
             //br
 
+            if category
+                include ../viewPartials/categoryDropdown
+
             include ../viewPartials/popularUploadsMediaDropdown
 
             include ../viewPartials/sensitivityFilterDropdown
