almost redone channel page

--- a/views/account/channel.pug
+++ b/views/account/channel.pug
@@ -56,7 +56,7 @@ block content
                         span.pewtube-pro PLUS
             div.user-stats.col-sm-6(style="margin-top:14px")
                 div.col-sm-4
-                    h4 Uploads: #{channel.uploads.length} &nbsp &nbsp
+                    h4 Uploads: #{userUploadAmount} &nbsp &nbsp
                 div.col-sm-4
                     h4 Views : #{channel.totalViews}
                 if channel.receivedSubscriptions
