--- a/views/public/search.pug
+++ b/views/public/search.pug
@@ -31,6 +31,23 @@ block content
 
                     div.text-center.center-div
 
+                        div.dropdown(style="display:inline;margin-right:15px;")
+                            button.btn.btn-primary.dropdown-toggle(type='button', data-toggle='dropdown' style="border-radius:5px")
+                                //| Order By: #{orderByEnglishString} &nbsp
+                                | Order By: thing &nbsp
+
+                                span.caret
+
+                            ul.dropdown-menu.dropdown
+                                li
+                                //    a(href=`/user/${channel.channelUrl}?orderBy=popular`) Popular
+                                //li
+                                //    a(href=`/user/${channel.channelUrl}?orderBy=newToOld`) New To Old
+                                //li
+                                //    a(href=`/user/${channel.channelUrl}?orderBy=oldToNew`) Old To New
+
+                        include ../viewPartials/mediaDropdown
+
                         include ../viewPartials/sensitivityFilterDropdown
                     br
                     br
