--- a/views/public/search.pug
+++ b/views/public/search.pug
@@ -9,7 +9,7 @@ block content
             br
             div(style="margin: 0 auto;")
                 input(type='hidden', name='_csrf', value=_csrf )
-                input.search-query-input.form-control(style="margin: 0 auto;width:400px" type='search', name='search', id='search' placeholder=`${searchQuery}`)
+                input.search-query-input.form-control(style="margin: 0 auto;width:400px" type='search', name='search', id='search' placeholder=`${searchQuery !== 'undefined' ? searchQuery: ''}`)
                 br
                 button.search-uploads-button.btn-lg.btn.btn-primary(type='submit' style="margin-right:10px" name="type" value="upload")
                     //i.fa.fa-lock
