--- a/views/public/search.pug
+++ b/views/public/search.pug
@@ -94,6 +94,9 @@ block content
 
         console.log(orderBy, mediaType, searchQuery, searchType)
 
+        $('.search-query-input').focus();
+
+
         // capture submit
         $('.search-uploads-button').click(function () {
 
