--- a/views/public/search.pug
+++ b/views/public/search.pug
@@ -110,8 +110,7 @@ block content
           if (e.which == 13) {
             var searchQuery = $('.search-query-input').val()
 
-            window.location = '/search?orderBy=' + orderBy + '&mediaType=' + mediaType + '&searchQuery=' + searchQuery + '&searchType=' + searchType
-
+            window.location = '/search?orderBy=' + orderBy + '&mediaType=' + mediaType + '&searchQuery=' + searchQuery + '&searchType=upload'
           }
         });
       })
