--- a/views/public/search.pug
+++ b/views/public/search.pug
@@ -35,6 +35,8 @@ block content
                 br
                 br
 
+                include ../viewPartials/searchPagination
+
                 p(style="text-decoration:underline;font-size:20px;") #{uploads.length} Results
 
                 if uploads && uploads.length > 0
