--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -12,15 +12,12 @@
       ul.nav.navbar-nav.front-header
         li(class=(title == 'Home') ? 'active' : undefined)
           a(href=`/`) Home
-
-        // popular/recent/channels only visible to plus users atm
-        if user && user.plan == 'plus'
           li(class=(title == 'Popular Uploads') ? 'active' : undefined)
             a(href=`/media/popular/1?within=24hour`) Popular
           li(class=(title == 'Recent Uploads') ? 'active' : undefined)
             a(href=`/media/recent`) Recent
-          li(class=(title == 'Channels') ? 'active' : undefined)
-            a(href=`/channels?within=24hour`) Channels
+          //li(class=(title == 'Channels') ? 'active' : undefined)
+          //  a(href=`/channels?within=24hour`) Channels
 
         li(class=(title == 'Search') ? 'active' : undefined)
           a(href=`/search`) Search
