--- a/views/viewPartials/categoryOverviews.pug
+++ b/views/viewPartials/categoryOverviews.pug
@@ -4,7 +4,7 @@ for category in categories
     if uploads[category.name] && uploads[category.name].length && uploads[category.name].length > 0
         div.category.col-sm-12
             a.upload-user-text(href=`${addressPrepend}/${highlightedNumber}?category=${category.name}`)
-                if user.role == 'admin' || user.role == 'moderator'
+                if user && (user.role == 'admin' || user.role == 'moderator')
                     h2 #{category.displayName} (#{uploads[category.name].length})
                 else
                     h2 #{category.displayName}
