--- a/views/account/channel.pug
+++ b/views/account/channel.pug
@@ -147,7 +147,7 @@ block content
 
     each upload in channel.uploads
         div.col-sm-4(style="text-align:center;height:360px")
-            if isUser || isAdmin || user.role == 'moderator'
+            if isUser || isAdmin || ( user && user.role == 'moderator' )
                 div.editFileButtons
                     form.editLink(action="/api/upload/delete" method="POST" style="display:inline-block")
                         input(type='hidden', name='_csrf', value=_csrf)
