--- a/views/media.pug
+++ b/views/media.pug
@@ -404,55 +404,7 @@ block content
       }
 
 
-    if user
-        script.
-            // change video qualities
-
-            var highQualityVideo = '#{uploadServer}/#{upload.uploader.channelUrl}/#{upload.uniqueTag}-high.mp4'
-
-            var fileType = '#{upload.fileType}'
-
-            if (fileType == 'video') {
-                var media = $(fileType)[0];
-            }
-            var userDefaultQuality = '#{user.defaultQuality}'
-
-            if (userDefaultQuality == 'high') {
-              $('.video-source').attr('src', highQualityVideo)
-              media = $(fileType)[0];
-              media.load();
-
-              $('#dropdownMenu1').text('Quality: High')
-              $('#dropdownMenu1').attr('quality', 'high');
-              $("#dropdownMenu1").append("<span class='caret'></span>");
-            }
-    else
-        script.
-
-          // change video qualities
-
-          var highQualityVideo = '#{uploadServer}/#{upload.uploader.channelUrl}/#{upload.uniqueTag}-high.mp4'
-
-          var fileType = '#{upload.fileType}'
-
-          if (fileType == 'video') {
-            var media = $(fileType)[0];
-          }
-
-          var siteVisitorDefaultQuality = '#{siteVisitor.defaultQuality}'
-
-          if (siteVisitorDefaultQuality == 'high') {
-            $('.video-source').attr('src', highQualityVideo)
-            media = $(fileType)[0];
-            media.load();
-
-            $('#dropdownMenu1').text('Quality: High')
-            $('#dropdownMenu1').attr('quality', 'high');
-            $("#dropdownMenu1").append("<span class='caret'></span>");
-          }
-
-
-
+    include ./mediaPlayerPartials/changeQualityJs
 
     script.
 
