show pointer with quality buttons

--- a/views/media.pug
+++ b/views/media.pug
@@ -100,7 +100,7 @@ block content
                         | Quality: Low
                         span.caret
 
-                    ul.dropdown-menu(role='menu', aria-labelledby='dropdownMenu1')
+                    ul.dropdown-menu(role='menu', aria-labelledby='dropdownMenu1' style="cursor:pointer;")
                         li(role='presentation')
                             a.low-quality Low
                         li(role='presentation')
